# darts-pro

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
darts_pro/base/: __init__.py  accuracy_calculator.py  board.py  game.py  state.py
darts_pro/base/player/: __init__.py  player.py
darts_pro/base/player/random_accuracy_player/: __init__.py  random_accuracy_player.py  target_probabilities.py
darts_pro/dqn/: __init__.py  agent.py  experience.py  network.py  player.py  q_values.py  train_loop.py
darts_pro/dqn/strategy/: __init__.py  epsilon_greedy.py  pure_greedy.py  strategy.py
darts_pro/games/o_one/: __init__.py  game.py  player.py  seed.py  state.py  train_loop.py
darts_pro/rl_mitch/: geometry.py  run_training.py
darts_pro/rl_mitch/dartboards/: base_dartboard.py  grid_dartboard.py
darts_pro/rl_mitch/dartboards/tests/: test_grid_dartboard.py
darts_pro/rl_mitch/networks/: multilayer_perceptron.py  perceptron_layer.py
darts_pro/rl_mitch/networks/config/: multi_layer_perceptron_config.py  perceptron_layer_config.py
darts_pro/rl_mitch/networks/config/tests/: test_multi_layer_perceptron_config.py
darts_pro/rl_mitch/tests/: test_geometry.py
notebooks/: random_accuracy_scratch.ipynb  sample_games.ipynb  train_cart_pole.ipynb  train_single_x01_agent.ipynb  validate_random_accuracy.ipynb
