[tool.poetry]
name = "darts-pro"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
scipy = "^1.9.3"
torch = "^2.0.0"
gymnasium = "^0.29.1"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pytest = "^6.2.4"
pylint = "^2.9.6"
mypy = "^0.910"
py-spy = "^0.3.8"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
